...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/album_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:singleLine="true"
        android:text="@string/empty_string"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:singleLine="true"
        android:text="@string/artist_name"
        app:layout_constraintBottom_toTopOf="@+id/album_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/album_cover"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="64dp"
        android:layout_height="64dp"
...
