<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_button"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/home"
        app:showAsAction="always" />

</menu>
